Bug 63254 - UI: Horizontal scrollbar area isn't displayed when resizing while sheet is RTL and gtk integration is present
Summary: UI: Horizontal scrollbar area isn't displayed when resizing while sheet is RT...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.6.2 release
Hardware: Other Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0 target:4.0.4 target:4.1....
Keywords: regression
Depends on:
Blocks: RTL-UI mab3.6
  Show dependency treegraph
 
Reported: 2013-04-08 09:20 UTC by Faisal Menawer
Modified: 2024-08-03 07:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
after resize when sheet is RTL (81.53 KB, image/png)
2013-04-09 21:33 UTC, Lior Kaplan
Details
after switching back to LTR sheet (without rezising) (83.14 KB, image/png)
2013-04-09 21:34 UTC, Lior Kaplan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Faisal Menawer 2013-04-08 09:20:57 UTC
steps to reproduce:

1- open new sheet with LTR UI.
2- change the sheet to be RTL(Right To Left).
3- resize the program window(for example let it maximize).


Current behavior:
the horizontal scrollbar are missing and not working.

Expected behavior:
the horizontal scrollbar are there and work.

work around:
change the sheet to LTR and resize the window
the horizontal scrollbar back and work again
Comment 1 Jorendc 2013-04-08 17:12:15 UTC
Hi Faisal,

Thanks for reporting. Seems like a duplicate of Bug 44657. Following that bug it is fixed. If this is a duplicate, please mark it as such and REOPEN Bug 44657 and leave a comment there with this steps.

If this is not a duplicate, please mark as UNCONFIRMED again.

Thanks in advance for your time.

Kind regards,
Joren
Comment 2 Lior Kaplan 2013-04-09 21:32:20 UTC
I can verify the bug on both 4.0.0.3 and 4.0.2.2. The problem is that the whole scroll bar area isn't redrawn on resize unless the sheet is LTR.

The bug is only present when the libreoffice-gtk package from debian or libobasis4.0-gnome-integration from our official build is present (also happened in Bug 44657).

Notice this isn't a duplicate of Bug 44657, as that bug handled the scrollbar doesn't appear in any case, this bug happens only when resizing while the active sheet is RTL.

The attached screen shots were taken while the background is black, so you can notice what area isn't redrawn on resize. When switching back to LTR sheet, the area isn't redrawn yet another time, showing the tab list on the right side, while the actual (and responsive) tab list is on the left side. Very confusing.

Notice another symptom of the bug is when in RTL sheet, the button visible on the right side of the non redrawn area is actually clickable if you click on the left ( = other side) of the area. This explains the arrow directing to the left, while according to the location it should direct right.
Comment 3 Lior Kaplan 2013-04-09 21:33:42 UTC
Created attachment 77701 [details]
after resize when sheet is RTL
Comment 4 Lior Kaplan 2013-04-09 21:34:13 UTC
Created attachment 77702 [details]
after switching back to LTR sheet (without rezising)
Comment 5 Ahmad Harthi 2013-05-04 05:52:55 UTC
This is a regression, I've tested LO 3.6.3 and it works fine while the bug appears in 3.6.6.2 and 4.0.0.2
Comment 6 Ahmad Harthi 2013-05-07 13:49:56 UTC
This bug should block mab3.6 not mab4.0
Comment 7 V Stuart Foote 2013-05-07 14:03:02 UTC
setting version to 3.6.6.2 release per comments
Comment 8 Abdulaziz Ayed 2013-05-24 11:38:24 UTC
I submit patch that will sovle this bug 

please take a look 
https://gerrit.libreoffice.org/#/c/4024/
Comment 9 Commit Notification 2013-05-28 08:01:04 UTC
Abdulaziz A Alayed committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=898a3e84807bccbb876e3f5583728f6d24e05e9a

fdo#63254 UI:Horizontal scroll bar isn't displayed when RTL tab



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-05-28 09:06:03 UTC
Abdulaziz A Alayed committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2fcf1ec2e1363d568f1f2023e21013b968f4354&h=libreoffice-4-0

fdo#63254 UI:Horizontal scroll bar isn't displayed when RTL tab


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-05-28 10:38:35 UTC
Abdulaziz A Alayed committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e0733e904d25b45a08fd410c0f94b196322cf94&h=libreoffice-4-1

fdo#63254 UI:Horizontal scroll bar isn't displayed when RTL tab


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Lior Kaplan 2013-05-28 10:39:07 UTC
Fix verified on a build from master. Cherry picked to the 4-0 and 4-1 branches.
Comment 13 Commit Notification 2013-06-28 08:07:47 UTC
Abdulaziz A Alayed committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-7":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebbe6b781151428272a0a3235f5eefc42c06a82e&h=libreoffice-3-6-7

fdo#63254 UI:Horizontal scroll bar isn't displayed when RTL tab


It will be available already in LibreOffice 3.6.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2013-06-28 18:43:12 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a08f579e3704fbd97590f9b050d250ae445725a7

fdo#63254: correct re-mirroring formula



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2013-07-09 10:56:55 UTC
Abdulaziz A Alayed committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=27fc11754c9dc24e4b695a2b53bcd4f010c2be65&h=libreoffice-3-6

fdo#63254 UI:Horizontal scroll bar isn't displayed when RTL tab


It will be available in LibreOffice 3.6.8.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Lior Kaplan 2013-07-21 07:58:15 UTC
(In reply to comment #14)
> Ivan Timofeev committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=a08f579e3704fbd97590f9b050d250ae445725a7
> 
> fdo#63254: correct re-mirroring formula

Seems to be OK on master.