fdo#63254 UI:Horizontal scroll bar isn't displayed when RTL tab

opened with LTR UI.

Change-Id: Iff6899539fe0b1788df7b09f91f850b91bcdb811
Reviewed-on: https://gerrit.libreoffice.org/4024
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
Tested-by: Stephan Bergmann <sbergman@redhat.com>
(cherry picked from commit 898a3e84807bccbb876e3f5583728f6d24e05e9a)