vcl/unx/gtk/gdi/salnativewidgets-gtk.cxx
@@ -1048,8 +1048,9 @@ sal_Bool GtkSalGraphics::getNativeControlRegion(  ControlType nType,
             rNativeContentRegion.Right() = rNativeContentRegion.Left() + 1;
         if (!rNativeContentRegion.GetHeight())
             rNativeContentRegion.Bottom() = rNativeContentRegion.Top() + 1;
-
-        returnVal = true;
+        //fdo#63254 horizontal scrool bar isn't displayed in RTL tab
+        // with LTR UI in calc
+        returnVal =Application::GetSettings().GetLayoutRTL();
 
         //See fdo#44582, Horizontal scrollbar in navigator window is broken
         if ((nPart==PART_BUTTON_LEFT || nPart==PART_BUTTON_RIGHT) && Application::GetSettings().GetLayoutRTL())
